Target JDK 25 throughout; drop the Java 17 baseline
JDK 25 is the supported baseline for this project and earlier JDKs are out of
scope, so pinning the published plugin to Java 17 was solving a problem nobody
has. The previous commit set `options.release` to 17 to make the jar match a
compatibility claim that, on inspection, neither the README nor the guide
actually makes -- it came from the review document.

Both compile tasks now read one `javaTarget` constant. The defect worth keeping
a guard for was never the version itself but the *divergence*: the Java and Scala
sources are compiled by different tasks, `-release:17` was set only on
`ScalaCompile`, and the shipped jar was 23 classes at class file version 61 and
64 at version 69. `verifyCompilerArtifacts` therefore asserts every entry sits at
exactly the expected version rather than merely below a ceiling, so the two
halves cannot drift apart again in either direction.

No CI change was needed: the matrix was already `java: ['25']` and nothing in the
workflows referenced an earlier JDK.

Verified: all 87 of the plugin's classes are class file version 69; the packaging
guard and the full suite are green at 247 tests, 2 skipped.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>